fix scale on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+  padding-bottom: 30px;
   overflow: auto;
   text-align: center;
 }
